🐛 FIX: Fixing layout issues in Safari

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -17,6 +17,7 @@ $red: #d9534f;
 $primary: #003399 !default;
 $warning: $yellow;
 $warning-invert: #fff;
+$light: #ecf0f1;
 
 $family-sans-serif: 'Lato', Helvetica, Arial, sans-serif;
 $body-size: 14px;
